[Report] Create report structure / sections title

--- a/report/main.tex
+++ b/report/main.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{amsthm}
 \usepackage{algorithm}
+\usepackage{hyperref}
 
 
 \title{On Upper-Confidence Bound Policies for Non-Stationary Bandit Problems}
@@ -21,6 +22,19 @@
 \cite{garivier2008upperconfidence}.
 
 \section{Introduction}
+
+\subsection{Multi armed bandits and UCB1 algorithm}
+
+\subsection{Non Stationary Bandits}
+
+\section{Discounted UCB}
+
+\section{Sliding Window UCB}
+
+\section{Critique}
+
+\section{Experiments}
+Our implementation : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
 
 \section{Conclusion}
 
