--- a/report/main.tex
+++ b/report/main.tex
@@ -25,11 +25,13 @@
 \section*{Abstract}
 \cite{garivier2008upperconfidence}.
 
+\input{0-abstract.tex}
+
 \section{Introduction}
 
 \subsection{Multi armed bandits and UCB1 algorithm}
 
-\input{intro-mabucb.tex}
+\input{1-intro-mab-ucb.tex}
 
 \subsection{Non Stationary Bandits}
 
@@ -40,7 +42,7 @@
 
 \input{3-sliding.tex}
 
-\section{Critique}
+\section{Critics}
 
 \section{Experiments}
 Our implementation : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
