--- a/report/main.tex
+++ b/report/main.tex
@@ -9,8 +9,9 @@
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{hyperref}
-\usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
+
+\usepackage{bbm}
 
 \DeclareMathOperator*{\argmax}{arg\,max}
 
@@ -23,24 +24,23 @@
 \maketitle
 
 \section*{Abstract}
-\cite{garivier2008upperconfidence}.
 
-\input{0-abstract.tex}
+	\input{0-abstract.tex}
 
 \section{Introduction}
 
-\subsection{Multi armed bandits and UCB1 algorithm}
+	\subsection{Multi armed bandits and UCB1 algorithm}
 
-\input{1-intro-mab-ucb.tex}
+		\input{1-intro-mab-ucb.tex}
 
-\subsection{Non Stationary Bandits}
+	\subsection{Non Stationary Bandits}
 
 \section{Discounted UCB}
-\input{2-discounted.tex}
+	\input{2-discounted.tex}
 
 \section{Sliding Window UCB}
 
-\input{3-sliding.tex}
+	\input{3-sliding.tex}
 
 \section{Critics}
 
