--- a/report/2-discounted.tex
+++ b/report/2-discounted.tex
@@ -4,5 +4,15 @@
     For t from 1 to $K$, play arm $I_t = t$ \\
     For t from $K$+1 to $T$, play arm 
     $$ I_t = \argmax_{1\leq i \leq K} \bar X_t(\gamma,i) + c_t(\gamma,i)$$
-
 \end{algorithm}
+
+Where
+\begin{align}
+\bar{X}(\tau, i) &= \frac{1}{N_t(\tau, i)}
+\sum_{s=t-\tau+1}^t \gamma^{t-s}X_s(i)\mathbbm{1}(I_s=i)\\
+N_t(\gamma, i) &= \sum_{s=t-\tau+1}^t \gamma^{t-s}\mathbbm{1}(I_s=i)\\
+c_t(\tau, i) &= 2B\sqrt{\frac{\xi \log(n_t(\gamma))}{N_t(\gamma,i)}}\\
+n_t(\gamma) &= \sum_{i=1}^K N_t(\gamma,i)
+\end{align}
+
+[TODO] More properties ?[]
