--- a/report/3-sliding.tex
+++ b/report/3-sliding.tex
@@ -14,6 +14,6 @@ N_t(\gamma, i) &= \sum_{s=t-\tau+1}^t \mathbbm{1}(I_s=i) \\
 c_t(\tau, i) &= B\sqrt{\frac{\xi \log(min(t, \tau))}{N_t(\tau,i)}}
 \end{align}
 
-These definitions drop $\gamma$, taking into account the fact that they say their variant is 'more abrupt [than \textit{D-UCB}]', and that $\gamma$ only appears in $N_t$. However, it could be interesting to see if the combination of the discount factor and the sliding window is interesting, but they unfortunately don't tackle this question.
+These definitions drop $\gamma$, taking into account the fact that they say their variant is 'more abrupt [than \textit{D-UCB}]'. However, it could be interesting to see if the combination of the discount factor and the sliding window is interesting, but they unfortunately don't tackle this question.
 
 [TODO] More properties ?[]
