[Report] Add subsection on Non stationary bandit + Fix typos

--- a/report/0-abstract.tex
+++ b/report/0-abstract.tex
@@ -1,3 +1,3 @@
 We worked on \cite{garivier2008upperconfidence}. It is about finding an algorithm for the non-stationary bandit problem. They study two algorithms, both based on \textit{Upper-Confidence Bound}(UCB) policies. The first, already existing algorithm is \textit{Discounted-UCB}(D-UCB), and they propose another one, \textit{Sliding-Window UCB}(SW-UCB).
 
-We coded D-UCB and SW-UCB and re-did their experiments. We found TODO.
+We implementated D-UCB and SW-UCB and re-did their experiments. We found TODO.
