--- a/report/main.tex
+++ b/report/main.tex
@@ -1,8 +1,13 @@
 \documentclass{article}
 
-% For ??
+% To use unicode character
 \usepackage[utf8]{inputenc}
+
+% For clickable links
 \usepackage{hyperref}
+
+% To control margins
+\usepackage[margin=1.5in]{geometry}
 
 % For bibliography
 \usepackage[square,numbers]{natbib}
@@ -45,6 +50,8 @@
 		\input{1-intro-mab-ucb.tex}
 
 	\subsection{Non Stationary Bandits}
+
+		\input{1-intro-nonstat-bandit.tex}
 
 \section{Discounted UCB}
 	\input{2-discounted.tex}
