[Report] Add context to DUCB section

--- a/report/nsucb.bib
+++ b/report/nsucb.bib
@@ -6,3 +6,12 @@
       archivePrefix={arXiv},
       primaryClass={math.ST}
 }
+
+@article{Kocsis06banditbased,
+    author = {Levente Kocsis and Csaba Szepesvári},
+    title = {Bandit based Monte-Carlo Planning},
+    booktitle = {In: ECML-06. Number 4212 in LNCS},
+    year = {2006},
+    pages = {282--293},
+    publisher = {Springer}
+}
