--- a/report/2-discounted.tex
+++ b/report/2-discounted.tex
@@ -1,4 +1,8 @@
-\begin{algorithm}
+\subsection{Discounted UCB policy}
+
+The first algorithm studied here was initially proposed by Kocsis and Szepesvári in 2006 \cite{Kocsis06banditbased} and is called Discounted UCB. In order to estimate the instantaneous expected reward, the policy averages the past reward with a discoud $\gamma$ which decrease exponentionally with time (the older a reward is, the less significant it is).  The policy algorithm is described in \ref{alg:d_ucb}. We can notice without much effort that if the discout factor $\gamma$ is set to 1, the discounted UCB boils down the original UCB algorithm.\\
+
+\begin{algorithm}[ht]
     \caption{Discounted UCB}
     \label{alg:d_ucb}
     For t from 1 to $K$, play arm $I_t = t$ \\
@@ -15,4 +19,11 @@ c_t(\tau, i) &= 2B\sqrt{\frac{\xi \log(n_t(\gamma))}{N_t(\gamma,i)}}\\
 n_t(\gamma) &= \sum_{i=1}^K N_t(\gamma,i)
 \end{align}
 
+We call $c$ the (dicounted) padding function and $\bar X$ represent the (discounted) empirical average.\\
+
 [TODO] More properties ?[]
+
+
+\subsection{Analysis of Discounted UCB}
+
+The authors propose an in depth analysis of the discounted UCB policy, in this section we are going to review the what we think are the most important. The complete list of Theorems and proofs can be found in the original paper by Garivier and Moulines \cite{garivier2008upperconfidence}.\\
