--- a/report/2-discounted.tex
+++ b/report/2-discounted.tex
@@ -19,10 +19,8 @@ c_t(\tau, i) &= 2B\sqrt{\frac{\xi \log(n_t(\gamma))}{N_t(\gamma,i)}}\\
 n_t(\gamma) &= \sum_{i=1}^K N_t(\gamma,i)
 \end{align}
 
-We call $c$ the (dicounted) padding function and $\bar X$ represent the (discounted) empirical average.\\
-
-[TODO] More properties ?[]
-
+We call in this context $c$ the dicounted padding function and $\bar X$ represent the discounted empirical average.\\
+As this algorithm seems to be more fitted in continuous changing environment (because of the $\gamma$), they authors propose another method that would be though to work in more abruptly changing environments.
 
 \subsection{Analysis of Discounted UCB}
 
