--- a/report/main.tex
+++ b/report/main.tex
@@ -59,10 +59,10 @@
 
 	\input{3-sliding.tex}
 
-\section{Critics}
-
 \section{Experiments}
 Our implementation : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
+
+\section{Critique}
 
 \section{Conclusion}
 
