--- a/report/main.tex
+++ b/report/main.tex
@@ -61,6 +61,10 @@
 
 \section{Experiments}
 Our implementation : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
+	
+	\subsection{Our experiments}
+	
+		\input{4-our-experiments.tex}
 
 \section{Critique}
 
