--- a/report/nsucb.bib
+++ b/report/nsucb.bib
@@ -15,3 +15,9 @@
     pages = {282--293},
     publisher = {Springer}
 }
+
+@misc{slidesGarivier,
+	author = {Garivier et al.},
+	howpublished="\url{https://www.math.univ-toulouse.fr/~agarivie/sites/default/files/ewrl0807bandits.pdf},
+	note="Online; accessed Jan 15, 2021."
+}
