[Report] Fix citation

--- a/report/nsucb.bib
+++ b/report/nsucb.bib
@@ -17,7 +17,7 @@
 }
 
 @misc{slidesGarivier,
-	author = {Garivier et al.},
-	howpublished="\url{https://www.math.univ-toulouse.fr/~agarivie/sites/default/files/ewrl0807bandits.pdf},
-	note="Online; accessed Jan 15, 2021."
+	author = {Aurélien Garivier},
+	howpublished="\url{https://www.math.univ-toulouse.fr/~agarivie/sites/default/files/ewrl0807bandits.pdf}",
+    note="Online; accessed Jan 15, 2021."
 }
