[Report] Complete abstract

--- a/report/0-abstract.tex
+++ b/report/0-abstract.tex
@@ -1,3 +1,1 @@
-We worked on \cite{garivier2008upperconfidence}. It is about finding an algorithm for the non-stationary bandit problem. They study two algorithms, both based on \textit{Upper-Confidence Bound}(UCB) policies. The first, already existing algorithm is \textit{Discounted-UCB}(D-UCB), and they propose another one, \textit{Sliding-Window UCB}(SW-UCB).
-
-We implementated D-UCB and SW-UCB and re-did their experiments. We found TODO.
+In this report we sum up the work of Garivier et al. \cite{garivier2008upperconfidence} and try to extend their work to new possibilities. This paper is about finding an algorithm for the non-stationary bandit problem. The authors study two algorithms, both based on \textit{Upper-Confidence Bound}(UCB) policies. The first, already existing algorithm is \textit{Discounted-UCB}(D-UCB), and they propose another one, \textit{Sliding-Window UCB}(SW-UCB). We implemented both policies and try to compare to two new variants we came up with of \textit{Sliding-Window UCB}(SW-UCB).
