--- a/report/3-sliding.tex
+++ b/report/3-sliding.tex
@@ -20,6 +20,6 @@ These definitions drop $\gamma$, taking into account the fact that they say thei
 
 We eventually found in \cite{slidesGarivier} that our definition of $N_t$ was good.
 
-Also, they don't deal with the case of an arm which has not been selected in the $\tau$ last steps. In the current formulation, this leads to $N_t(\gamma, i)=0$ and to a division by $0$ in the definition of $\bar{X}(\tau, i)$.
+Also, they don't deal with the case of an arm which has not been selected in the last $\tau$ steps. In the current formulation, this leads to $N_t(\gamma, i)=0$ and to a division by $0$ in the definition of $\bar{X}(\tau, i)$. We found different ways to cope with this situation, as explained in section \ref{sec_expes}.
 
 [TODO] More properties ?[]
