--- a/report/5-critics.tex
+++ b/report/5-critics.tex
@@ -1,3 +1,5 @@
 - The obviously not rereading of the definition of \textit{SW-UCD} is definitely a pity.
 
 - In general, the paper is not very clear. We soon get lost into computational details, without the authors helping us get the big picture out of it. For example, if they had described the idea behind SW-UCB more, we may have understood their point. Maybe in the end they use the same definition of $N_t$ as in D-UCB, leading to no error of division by zero, but maybe not. We don't know.
+
+- Experiments: for D-UCB and SW-UCB they took the hyperparameters tuned to the very problem they are working on, and for UCB1 they took theoretical values from another paper.
