--- a/report/main.tex
+++ b/report/main.tex
@@ -61,7 +61,7 @@
 
 	\input{3-sliding.tex}
 
-\section{Experiments}
+\section{Experiments} \label{sec_expes}
 Our implementation : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
 	
 	\subsection{Our experiments}
