--- a/report/main.tex
+++ b/report/main.tex
@@ -22,6 +22,9 @@
 \usepackage{amsfonts}
 \usepackage{bbm} % For indicator function
 
+% To typeset code
+\usepackage{listings}
+
 % Well, it's in the name
 \usepackage{algorithm}
 \usepackage[noend]{algpseudocode}
@@ -62,15 +65,20 @@
 	\input{3-sliding.tex}
 
 \section{Experiments} \label{sec_expes}
-Our implementation : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
+
+Our implementation can be found here : \url{https://github.com/MaxenceGiraud/ucb-nonstationary} 
 	
 	\subsection{Our experiments}
 	
 		\input{4-our-experiments.tex}
 
 \section{Critique}
+	
+	\input{5-critics.tex}
 
 \section{Conclusion}
+
+	\input{6-conclusions.tex}
 
 \bibliography{nsucb}
 
